function for retrieving pr info, progress bar for the whole dataset and other minor changes

--- a/github-dataset-embedding-and-uploading.ipynb
+++ b/github-dataset-embedding-and-uploading.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "('PostgreSQL 16.0, compiled by Visual C++ build 1935, 64-bit',)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,23 +214,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test insert\n",
     "# insert_or_update_pr_info(\"\", 44735997, \"plotly@plotly.js\", \"https://github.com/plotly/plotly.js/pull/1#discussion_r44735997\", \"devtools/test_dashboard/server.js\", 36, \"etpinard\", \"@@ -1,89 +1,53 @@\\n-var http = require('http');\\n-var ecstatic = require('ecstatic');\\n-var browserify = require('browserify');\\n-var open = require('open');\\n var fs = require('fs');\\n-var watchify = require('watchify');\\n+var http = require('http');\\n var path = require('path');\\n-var outpipe = require('outpipe');\\n-var outfile = path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/build/plotlyjs-bundle.js');\\n-\\n-var testFile = './test';\\n-\\n-switch(process.argv[2]) {\\n-  case 'geo':\\n-    testFile = './test-geo';\\n-  break;\\n-  case '2d':\\n-    testFile = './test-2d';\\n-  break;\\n-}\\n-\\n-console.log('using ' + testFile);\\n-\\n-var b = browserify(path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/src/plotly.js'), {\\n-  debug: true,\\n-  verbose: true,\\n-  standalone: 'Plotly',\\n-  transform: path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/compress_attributes.js'),\\n-  cache: {},\\n-  packageCache: {}\\n-});\\n-\\n-\\n-var w = watchify(b);\\n \\n-var bytes, time;\\n-w.on('bytes', function (b) { bytes = b });\\n-w.on('time', function (t) { time = t });\\n-\\n-w.on('update', bundle);\\n-bundle();\\n+var browserify = require('browserify');\\n+var ecstatic = require('ecstatic');\\n+var _open = require('open');\\n \\n-var firstBundle = true;\\n+var makeWatchifiedBundle = require('../../tasks/util/make_watchified_bundle');\\n+var shortcutPaths = require('../../tasks/util/shortcut_paths');\\n+var constants = require('../../tasks/util/constants');\\n \\n-function bundle () {\\n-    var didError = false;\\n-    var outStream = process.platform === 'win32'\\n-        ? fs.createWriteStream(outfile)\\n-        : outpipe(outfile);\\n \\n-    var wb = w.bundle();\\n-    wb.on('error', function (err) {\\n-        console.error(String(err));\\n-        didError = true;\\n-        outStream.end('console.error('+JSON.stringify(String(err))+');');\\n-    });\\n-    wb.pipe(outStream);\\n+// TODO make this an optional argument\\n+var PORT = '8080';\\n \\n-    outStream.on('error', function (err) {\\n-        console.error(err);\\n-    });\\n-    outStream.on('close', function () {\\n-        if (!didError) {\\n-            console.error(bytes + ' bytes written to ' + outfile\\n-                + ' (' + (time / 1000).toFixed(2) + ' seconds)'\\n-            );\\n-            if(firstBundle) {\\n-              open('http://localhost:8080/test-dashboard');\\n-              firstBundle = false;\\n-            }\\n-        }\\n-    });\\n+var testFile;\\n+switch(process.argv[2]) {\\n+    case 'geo':\\n+        testFile = './test-geo';\\n+    break;\\n+    case '2d':\\n+        testFile = './test-2d';\\n+    break;\\n+    default:\\n+        testFile = './test-3d';\\n }\\n \\n-////// build the test examples\\n+console.log('Using ' + testFile);\\n+console.log('Listening on :' + PORT + '\\\\n');\\n \\n-fs.unlink('./test-bundle.js', function(error) {\\n-    browserify({\\n+// watch plotly.js\\n+var watchifiedBundle = makeWatchifiedBundle(function onFirstBundleCallback() {\\n+    _open('http://localhost:' + PORT + '/devtools/test_dashboard');\\n+});\\n+watchifiedBundle();\", \"the test dashboard server script uses the same watch-bundling machinery as `npm run watch` \\n:palm_tree: :palm_tree: \\n\", \"2abf31f5cb19b7cca9a4944ee506fe716ec44442\", \"JavaScript\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_pr_info_by_vector_ids(vector_ids: list[str]):\n",
+    "    placeholders = ', '.join(['%s' for _ in vector_ids])\n",
+    "\n",
+    "    sql = f\"SELECT * FROM pr_info WHERE vector_id IN ({placeholders})\"\n",
+    "\n",
+    "    cur.execute(sql, vector_ids)\n",
+    "\n",
+    "    results = cur.fetchall()\n",
+    "\n",
+    "    pr_info_list = []\n",
+    "    for result in results:\n",
+    "        pr_vector_id, pr_id, pr_repo_name, pr_html_url, pr_file_path, pr_line, pr_user, pr_diff_hunk, pr_body, pr_commit_id, pr_language = result\n",
+    "        pr_info_list.append({\n",
+    "            \"vector_id\": pr_vector_id,\n",
+    "            \"id\": pr_id,\n",
+    "            \"repo_name\": pr_repo_name,\n",
+    "            \"html_url\": pr_html_url,\n",
+    "            \"file_path\": pr_file_path,\n",
+    "            \"line\": pr_line,\n",
+    "            \"user\": pr_user,\n",
+    "            \"diff_hunk\": pr_diff_hunk,\n",
+    "            \"body\": pr_body,\n",
+    "            \"commit_id\": pr_commit_id,\n",
+    "            \"language\": pr_language\n",
+    "        })\n",
+    "\n",
+    "    return pr_info_list"
    ]
   },
   {
@@ -242,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,19 +306,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'dimension': 384,\n",
-       " 'index_fullness': 0.0,\n",
-       " 'namespaces': {},\n",
-       " 'total_vector_count': 0}"
+       " 'index_fullness': 0.03892,\n",
+       " 'namespaces': {'': {'vector_count': 3892}},\n",
+       " 'total_vector_count': 3892}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,10 +602,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Custom queue class to track the number of files\n",
+    "class CountedQueue(queue.Queue):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        self.total_files = 0\n",
+    "\n",
+    "    def put(self, item, *args, **kwargs):\n",
+    "        super().put(item, *args, **kwargs)\n",
+    "        self.total_files += 1\n",
+    "            \n",
     "def worker(file_queue: queue.Queue):\n",
     "    while True:\n",
     "        file_path = file_queue.get()\n",
@@ -597,9 +632,10 @@
     "\n",
     "        for row in generate_pr_info(file_path, upsert_data, 'JavaScript'):\n",
     "            # (vector_id, pr_id, repo_name, html_url, file_path, line, user, diff_hunk, body, commit_id, language)\n",
-    "            insert_or_update_pr_info(row['vector_id'], row['id'], row['repo'], row['html_url'], row['path'], row['line'], row['user'], row['diff'], row['body'], row['commit_id'], row['language'])\n",
+    "            insert_or_update_pr_info(row['vector_id'], row['pr_id'], row['repo_name'], row['html_url'], row['file_path'], row['line'], row['user'], row['diff_hunk'], row['body'], row['commit_id'], row['language'])\n",
     "        \n",
-    "        logging.info(f\"Logging: {file_path} processed\")\n",
+    "        split_txt = \"\\\\\"\n",
+    "        logging.info(f\"Logging: {file_path.split(split_txt)[1]} processed\")\n",
     "\n",
     "        file_queue.task_done()\n",
     "\n",
@@ -617,7 +653,7 @@
     "# Main function to process files using multiple threads\n",
     "def process_files_with_threads(file_names: list[str], num_threads: int, start: int = 0, end=None):\n",
     "    # Create a thread-safe queue\n",
-    "    file_queue = queue.Queue()\n",
+    "    file_queue = CountedQueue()\n",
     "\n",
     "    # Populate the queue with file names\n",
     "    for file_name in file_names[start:end]:\n",
@@ -625,6 +661,11 @@
     "\n",
     "    # Create worker threads\n",
     "    threads = create_worker_threads(num_threads, file_queue)\n",
+    "\n",
+    "    # Create a tqdm progress bar\n",
+    "    with tqdm(total=file_queue.total_files, unit=\"file\") as pbar:\n",
+    "        while pbar.n < file_queue.total_files:\n",
+    "            pbar.update(0)  # Update the progress bar\n",
     "\n",
     "    # Wait for all file processing to be completed\n",
     "    file_queue.join()\n",
@@ -653,47 +694,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c64118aeb5e348939a14ab31a15ec67a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Making requests to HuggingFace API:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# e1 = huggingface_inference_api_request(e0, 200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# m1 = generate_metadata(file_paths[500])\n",
     "# type(m1[0]['id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pri1 = generate_pr_info(file_paths[500], u1, 'JavaScript')\n",
+    "# pri1"
    ]
   },
   {
@@ -707,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,21 +750,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "<class 'tuple'>\n",
-      "<class 'str'>\n",
-      "<class 'list'>\n",
-      "<class 'dict'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print(type(z1))\n",
     "# print(type(z1[0]))\n",
@@ -790,19 +803,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'dimension': 384,\n",
-       " 'index_fullness': 0.0,\n",
-       " 'namespaces': {},\n",
-       " 'total_vector_count': 0}"
+       " 'index_fullness': 0.03916,\n",
+       " 'namespaces': {'': {'vector_count': 3916}},\n",
+       " 'total_vector_count': 3916}"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,12 +826,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "40fc0da8ceda4f5a8111ff4f19de42a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/7366 [00:00<?, ?file/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d054cf8b65334b5f991670222d4e3904",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Splitting file into payloads:   0%|          | 0/8576 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7163d9ef173f4c0d9c750272a70e3619",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Splitting file into payloads:   0%|          | 0/8545 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89f938fc9a0f404ea62f5e71879cb707",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Splitting file into payloads:   0%|          | 0/9224 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a034052eaa341afa576cda5642cdeb6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Splitting file into payloads:   0%|          | 0/8859 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb6289c0540840d5872d6c35571b0ca6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Making requests to HuggingFace API:   0%|          | 0/43 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51f7d14ca3af4925a13d05c49f785831",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Splitting file into payloads:   0%|          | 0/9083 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a0a5c196d6049a5af24020b91812f77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Splitting file into payloads:   0%|          | 0/8230 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c1eac758a50f45b6923cde608795704d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Making requests to HuggingFace API:   0%|          | 0/43 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6ecfc2127f4e4f1f981cfa24b618da57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Making requests to HuggingFace API:   0%|          | 0/47 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3163045991d477281620fff5874687d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Making requests to HuggingFace API:   0%|          | 0/46 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c244e6ceb9d84f359bfb2eb0d484ba6a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Making requests to HuggingFace API:   0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c76c1f727353426d85127aaf6fe5c840",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Making requests to HuggingFace API:   0%|          | 0/42 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "file_paths = import_filepaths('D:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/*.json')\n",
-    "process_files_with_threads(file_names=file_paths, num_threads=1, start=500, end=510)"
+    "process_files_with_threads(file_names=file_paths, num_threads=6)"
    ]
   }
  ],
