updating insert function to handle when a row already exists

--- a/github-dataset-embedding-and-uploading.ipynb
+++ b/github-dataset-embedding-and-uploading.ipynb
@@ -202,7 +202,19 @@
     "    try:\n",
     "        cur.execute(\"\"\"\n",
     "            INSERT INTO pr_info (pr_vector_id, pr_id, pr_repo_name, pr_html_url, pr_file_path, pr_line, pr_user, pr_diff_hunk, pr_body, pr_commit_id, pr_language)\n",
-    "            VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s);\n",
+    "            VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "            ON CONFLICT (pr_vector_id)\n",
+    "            DO UPDATE SET\n",
+    "                pr_id = EXCLUDED.pr_id,\n",
+    "                pr_repo_name = EXCLUDED.pr_repo_name,\n",
+    "                pr_html_url = EXCLUDED.pr_html_url,\n",
+    "                pr_file_path = EXCLUDED.pr_file_path,\n",
+    "                pr_line = EXCLUDED.pr_line,\n",
+    "                pr_user = EXCLUDED.pr_user,\n",
+    "                pr_diff_hunk = EXCLUDED.pr_diff_hunk,\n",
+    "                pr_body = EXCLUDED.pr_body,\n",
+    "                pr_commit_id = EXCLUDED.pr_commit_id,\n",
+    "                pr_language = EXCLUDED.pr_language;;\n",
     "        \"\"\", (vector_id, pr_id, repo_name, html_url, file_path, line, user, diff_hunk, body, commit_id, language))\n",
     "        conn.commit()\n",
     "        return True\n",
@@ -268,16 +280,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\louis\\anaconda3\\envs\\MachineLearning\\Lib\\site-packages\\pinecone\\index.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pinecone\n",
     "\n",
@@ -296,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1010,11 +1013,23 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\GitHub\\review-owl\\github-dataset-embedding-and-uploading.ipynb Cell 50\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/review-owl/github-dataset-embedding-and-uploading.ipynb#X32sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m file_paths \u001b[39m=\u001b[39m import_filepaths(\u001b[39m'\u001b[39m\u001b[39mD:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/*.json\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/GitHub/review-owl/github-dataset-embedding-and-uploading.ipynb#X32sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m process_files_with_threads(file_names\u001b[39m=\u001b[39mfile_paths, num_threads\u001b[39m=\u001b[39m\u001b[39m6\u001b[39m)\n",
+      "\u001b[1;32mc:\\GitHub\\review-owl\\github-dataset-embedding-and-uploading.ipynb Cell 50\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/GitHub/review-owl/github-dataset-embedding-and-uploading.ipynb#X32sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39m# Create a tqdm progress bar\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/GitHub/review-owl/github-dataset-embedding-and-uploading.ipynb#X32sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m \u001b[39mwith\u001b[39;00m tqdm(total\u001b[39m=\u001b[39mfile_queue\u001b[39m.\u001b[39mtotal_files, unit\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mfile\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m pbar:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/GitHub/review-owl/github-dataset-embedding-and-uploading.ipynb#X32sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m     \u001b[39mwhile\u001b[39;00m pbar\u001b[39m.\u001b[39mn \u001b[39m<\u001b[39m file_queue\u001b[39m.\u001b[39mtotal_files:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/GitHub/review-owl/github-dataset-embedding-and-uploading.ipynb#X32sZmlsZQ%3D%3D?line=58'>59</a>\u001b[0m         pbar\u001b[39m.\u001b[39mupdate(\u001b[39m0\u001b[39m)  \u001b[39m# Update the progress bar\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/GitHub/review-owl/github-dataset-embedding-and-uploading.ipynb#X32sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m \u001b[39m# Wait for all file processing to be completed\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
     "file_paths = import_filepaths('D:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/*.json')\n",
-    "process_files_with_threads(file_names=file_paths, num_threads=6)"
+    "process_files_with_threads(file_names=file_paths, num_threads=6, start=5000, end=5010)"
    ]
   }
  ],
